test/kind/vk8s-network-workloads.yaml
apiVersion: v1
kind: Pod
metadata:
  name: peer
  labels:
    app: peer
spec:
  containers:
    - name: peer
      image: breakfix-test/vk8s-network:1
      imagePullPolicy: IfNotPresent
      command:
        - sh
        - -c
        - mkdir -p /www && printf ok > /www/index.html && exec httpd -f -p 8080 -h /www
---
apiVersion: v1
kind: Service
metadata:
  name: peer
spec:
  selector:
    app: peer
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: learner
  labels:
    app: learner
spec:
  containers:
    - name: learner
      image: breakfix-test/vk8s-network:1
      imagePullPolicy: IfNotPresent
      command:
        - sleep
        - "900"
